# StreamAudioIndex

./: .gitignore  CMakeLists.txt  I1__postinglist_sim.txt  Ii.txt  IndexSetup.py  Log.txt  README.md  Result.txt  Text2Mfcc.py  Text2Speech.py  TopHeap.py  main.cpp  mfcc.py  middle-layer.py  middle-layer2.py  setup.py  test.html
BasicStructure/: AudioInfo.cpp  AudioInfo.h  AudioInfo.i  AudioInfo.py  AudioInfo_wrap.cxx  IdfCode.cpp  IdfCode.h  NodeInfo.cpp  NodeInfo.h  ProgramList.cpp  ProgramList.h
HybridIndex/: HybridIndexManager.cpp  HybridIndexManager.h
I0Sort/: I0SortThreadFre.h  I0SortThreadSig.h  I0SortThreadSim.h  InvertedIndex0SortThread.h
Index/: I1__postinglist_sim.txt
Merge/: InvertedIndexMergerThread.h  InvertedIndexMergerThreadSig.h
PhonomeIndex/: PhoIndexManager.cpp  PhoIndexManager.h  Phoneme.cpp  Phoneme.h  PhonomeIndex.cpp  PhonomeIndex.h  SimilarPhoneme.cpp  SimilarPhoneme.h  phonome.cpp  phonome.h
TemplateIndex/: Cmp.h  IndexString.cpp  IndexString.h  IndexTemplate.cpp  IndexTemplate.h  InvertedIndexMergerThread.h  InvertedIndexMergerThreadSim.h  ManagerTemplate.h  Sig.cpp
TextIndex/: IndexManager.cpp  IndexManager.h  InvertedIndex.cpp  InvertedIndex.h
cpp-btree-1.0.1/: btree.h
demoC++/: I0.cpp  I0.h  Ii.cpp  TermFreq.cpp  index.cpp  utils.h
linkLIst/: json.hpp  main.cpp  test.html
linkLIst/src/: AudioInfo.h  IndexManager.cpp  IndexManager.h  InvertedIndex.cpp  InvertedIndex.h  NodeInfo.h  ProgramList.cpp  ProgramList.h  index.cpp  index.h
python/: BuildAnalysis.txt  Components of Indexes.txt  IndexSetup.py  MergeTimeAnalysis.txt  MiddleLayer.py  memory_of_index.txt  test_of_index.txt
src/: AudioInfo.cpp  AudioInfo.h  Fre.cpp  Fre.h  Hash.cpp  Hash.h  HybridIndexManager.cpp  HybridIndexManager.h  I0.cpp  I0.h  Ii.cpp  Ii.h  Ilive.cpp  Ilive.h  IndexAll.cpp  IndexAll.h  IndexManager.cpp  IndexManager.h  InvertedIndex.cpp  InvertedIndex.h  ListInfo.cpp  ListInfo.h  NodeInfo.cpp  NodeInfo.h  ProgramList.cpp  ProgramList.h  Sig.cpp  Sig.h  SimpleDTW.cpp  SimpleDTW.h  TermFreq.h  index.cpp  index.h  utils.cpp  utils.h
template/: IndexTemplate.h  InvertedIndexMergerThread.h  InvertedIndexMergerThreadFre.h  dtw.h  phonome.cpp  phonome.h
utils/: test.cpp  test.h  utils.cpp  utils.h
